--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-resource": "^0.1.17",
+    "bootstrap": "^3.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
