--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.5",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.7",
     "vue": "^2.5.2",
     "vue-material": "^1.0.0-beta-7",
     "vue-resource": "^0.1.17",
