can upload excel file and convert it into JSON format

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.5.2",
     "vue-material": "^1.0.0-beta-7",
     "vue-resource": "^0.1.17",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "xlsx": "^0.12.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
