--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^3.3.5",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
