--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-material": "^1.0.0-beta-7",
     "vue-resource": "^0.1.17",
     "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
     "xlsx": "^0.12.4"
   },
   "devDependencies": {
