--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^3.3.5",
+    "bootstrap": "^4.0.0",
+    "element-ui": "^2.2.2",
+    "jquery": "^3.3.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
     "vue": "^2.5.2",
-    "vue-material": "^1.0.0-beta-7",
+    "vue-json-schema": "^1.1.0",
     "vue-resource": "^0.1.17",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
