--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "bootstrap-vue": "^2.0.0-rc.2",
     "element-ui": "^2.2.2",
     "jquery": "^3.3.1",
     "node-sass": "^4.7.2",
