--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0",
+    "bootstrap-sass": "^3.3.7",
     "bootstrap-vue": "^2.0.0-rc.2",
     "element-ui": "^2.2.2",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
@@ -24,10 +26,9 @@
     "vue-json-schema": "^1.1.0",
     "vue-resource": "^0.1.17",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.8.11",
     "vuex": "^3.0.1",
-    "xlsx": "^0.12.4",
-    "font-awesome": "^4.7.0",
-    "bootstrap-sass": "^3.3.7"
+    "xlsx": "^0.12.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
