--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "element-ui": "^2.2.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.11.0",
     "sass-loader": "^6.0.7",
     "vue": "^2.5.2",
     "vue-json-schema": "^1.1.0",
     "vue-resource": "^0.1.17",
     "vue-router": "^3.0.1",
+    "vue-sweetalert2": "^1.5.9",
     "vue2-google-maps": "^0.8.12",
     "vuex": "^3.0.1",
     "xlsx": "^0.12.4"
